--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ims-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
