--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,14 @@
 {
-    "version": 2,
     "builds": [
-        {
-            "src": "./server.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "./server.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ],
-    "regions": ["sin1"]
-}
+      {
+        "src": "/(.*)",
+        "dest": "/server.js"
+      }
+    ]
+  }
