--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex": "^2.3.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "socket.io": "^4.5.4"
   }
 }
